# git-working-policy

./: README.md  pyproject.toml
git_working_policy/app/: app.py  branch_name_view.py  welcome.py
